<resources>
    <string name="app_name">Personal-Finance-Tracker</string>
    <string name="personal_finance_tracker">Personal Finance Tracker</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login"> </string>
    <string name="log_in">Log In</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="view_expenses">View Expenses</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete_user_admin">Delete User (ADMIN)</string>
    <string name="add_user_admin">Add User (ADMIN)</string>
    <string name="add_budget">Add Budget</string>
    <string name="expenses">Expenses</string>
    <string name="diffLabel">+/-</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="return_to_login">Return to Login</string>
    <string name="create_user">Create User</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="yes">Yes</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="return_to_dashboard">Return to Dashboard</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="amount">Amount</string>
    <string name="update_budget">Update Budget</string>
    <string name="delete_user">Delete User</string>
</resources>