<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/finance_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_finance_tracker"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/editTextUsername"
        android:inputType="text"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="#858585"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="16sp"
        android:textColorHint="#858585"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/LoginButton"
        android:textColor="@color/light_gray"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        android:textSize="16sp"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_blue"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/sign_up"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/noAccountTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>