<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".AdminDeleteUser">

    <View
        android:id="@+id/top_bg_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_design"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DeleteUserTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/delete_user"
        android:textColor="@color/light_gray"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserNameTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:text="@string/username"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@+id/UserNameEditTextView"
        app:layout_constraintTop_toBottomOf="@+id/DeleteUserTitleTextView" />

    <EditText
        android:id="@+id/UserNameEditTextView"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTitleTextView" />


    <TextView
        android:id="@+id/EmailTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/email"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@+id/NewEmailEditTextView"
        app:layout_constraintTop_toBottomOf="@+id/UserNameEditTextView" />

    <EditText
        android:id="@+id/NewEmailEditTextView"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTitleTextView" />

    <Button
        android:id="@+id/DeleteUserButton"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="116dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/delete_user"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewEmailEditTextView" />

    <Button
        android:id="@+id/ReturnToDashboardButton"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/return_to_dashboard"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeleteUserButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/EmailTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameEditTextView"
        app:layout_constraintVertical_bias="0.675" />


</androidx.constraintlayout.widget.ConstraintLayout>